Fix css problem on firefox

--- a/html/style.css
+++ b/html/style.css
@@ -6,9 +6,12 @@ body {
 	font-size: 42px;
 	font-weight: 800;
 	text-transform: uppercase;
-	fill: white;
-	stroke: black;
-	stroke-width: 3px;
+	color: white;
+	text-shadow:
+		-3px -3px 0 #000,
+		3px -3px 0 #000,
+		-3px 3px 0 #000,
+		3px 3px 0 #000;
 }
 
 .disabled {
